# content-processing-solution-accelerator

./: .coverage  .flake8  .gitignore  README - updated.md  README.md  SUPPORT.md  TRANSPARENCY_FAQ.md  azure.yaml  coverage.xml
docs/: API.md  (+13 more)
src/ContentProcessor/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
src/ContentProcessor/.devcontainer/: Dockerfile  devcontainer.json
src/ContentProcessor/pipelines/: azure-pipelines.yml
src/ContentProcessor/src/: main.py
src/ContentProcessor/src/libs/application/: application_configuration.py  application_context.py  env_config.py
src/ContentProcessor/src/libs/azure_helper/: app_configuration.py  azure_openai.py  comsos_mongo.py  content_understanding.py  storage_blob.py
src/ContentProcessor/src/libs/base/: application_main.py  application_models.py
src/ContentProcessor/src/libs/models/: content_process.py
src/ContentProcessor/src/libs/pipeline/: pipeline_queue_helper.py  pipeline_step_helper.py  queue_handler_base.py
src/ContentProcessor/src/libs/process_host/: handler_process_host.py  handler_type_loader.py
src/ContentProcessor/src/tests/: test_main.py
src/ContentProcessorAPI/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  requirements.txt
src/ContentProcessorAPI/.devcontainer/: Dockerfile  devcontainer.json
src/ContentProcessorAPI/app/: .env  appsettings.py  dependencies.py  main.py
src/ContentProcessorAPI/app/routers/: contentprocessor.py  schemavault.py
src/ContentProcessorAPI/app/tests/: test_dependencies.py  test_main.py
src/ContentProcessorAPI/pipelines/: azure-pipelines.yml
src/ContentProcessorAPI/samples/: upload_files.ps1  upload_files.sh
src/ContentProcessorAPI/samples/schemas/: invoice.py  propertyclaim.py  realestatecontract.py  register_schema.ps1  register_schema.sh  schema_info_ps1.json  schema_info_sh.json  vehicle_insurance.py
src/ContentProcessorAPI/test_http/: invoke_APIs.http
(+182 files in other folders)
